# vgg16

./: pyproject.toml
base/: base_data_loader.py  base_data_setter.py  base_model.py  base_trainer.py
dataprovider/: data_loader.py  data_setter.py
model/vgg16/: loss.py  metric.py  model.py
train/: train.py  trainer.py
