[tool.poetry]
name = "vgg16"
version = "0.1.0"
description = ""
authors = ["pai-parkapark <tlcnrrn21@publicai.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.1"
numpy = "^2.0.0"
tqdm = "^4.66.4"
torchvision = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

